(27/09) - Update index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="card">
-    <img class="card-img" src="assets/img/lisboa.jpg"/>
+    <img class="card-img" src="assets/img/lisboa.jpg" alt="Lisboa"/>
     <h1 class="card-title">
         Title
     </h1>
