(27/09) - Created base of my portfolio

--- a/index.html
+++ b/index.html
@@ -1,31 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Reservation Card</title>
-    <link rel="stylesheet" href="assets/css/index.css"/>
+    <!-- Website Title -->
+    <title>Estéban Piecourt — Portfolio</title>
+
+    <!-- Meta Data -->
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width"/>
+
+    <meta name="title" content="Estéban Piecourt — FullStack Developer"/>
+    <meta name="description" content="I'm a web developer from France and this is my place on the web."/>
+
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://espiec.com/"/>
+    <meta property="og:title" content="Estéban Picourt — FullStack Developer"/>
+    <meta property="og:description" content="I'm a web developer from France and this is my place on the web."/>
+    <meta property="og:image" itemProp="image" content="assets/img/thumbnail.png"/>
+
+    <meta property="twitter:card" content="summary_large_image"/>
+    <meta property="twitter:url" content="https://espiec.com/"/>
+    <meta property="twitter:title" content="Estéban Piecourt — FullStack Developer"/>
+    <meta
+            property="twitter:description"
+            content="I'm a web developer from France and this is my place on the web."
+    />
+    <meta property="twitter:image" content="assets/img/thumbnail.png"/>
+    <!-- -->
+
+    <!-- Favicon -->
+    <link rel="icon" href="assets/img/favicon.png"/>
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="assets/css/globals.css"/>
+    <link rel="stylesheet" href="assets/css/patterns.css"/>
+
+    <link rel="stylesheet" href="assets/css/heading.css"/>
+
+    <!-- Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Space+Grotesk">
+
+    <!-- Scripts -->
+    <script src="https://kit.fontawesome.com/b2339f41a6.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="card">
-    <img class="card-img" src="assets/img/lisboa.jpg" alt="Lisboa"/>
-    <h1 class="card-title">
-        Title
-    </h1>
-    <div class="card-description">
-        <p class="card-date">
-            26 Septembre 2023
-        </p>
-        <p class="card-author">
-            Par Estéban
-        </p>
-    </div>
-    <div class="card-button">
-        <img src="#" alt=""/>
-    </div>
-    <div class="card-progress-bar" value="100"></div>
-    <div class="card-interested-persons" value="60">
-        <img src="#" alt=""/> 60 Personnes sont intéressées
-    </div>
+
+<!-- Noise Texture -->
+<div class="grainy-pattern"></div>
+<div class="gradient-pattern"></div>
+
+<!-- Main Container -->
+<div class="main-container">
+    <!-- Main Container -->
+    <main class="main-wrapper">
+
+        <!-- Heading -->
+        <div class="heading-container">
+            <h1 class="title">Estéban Piecourt</h1>
+            <h2 class="job">FullStack Developer</h2>
+
+            <!-- Socials Buttons -->
+            <div class="socials">
+
+                <!-- GitHub Social Button -->
+                <a class="social-button" href="https://github.com/estxbxn" target="_blank">
+                    GitHub
+                </a>
+                <a class="social-button" href="https://gitlab.com/estxbxn" target="_blank">
+                    GitLab
+                </a>
+                <a class="social-button" href="https://discord.com/user/estxbxn" target="_blank">
+                    Discord
+                </a>
+                <a class="social-button" href="https://twitter.com/estxbxn___" target="_blank">
+                    Twitter
+                </a>
+            </div>
+        </div>
+    </main>
 </div>
 </body>
 </html>
