--- a/index.html
+++ b/index.html
@@ -192,14 +192,16 @@
         <div class="description">
           Projects on which I was able to work and collaborate
         </div>
-        <div class="project">
-          <div class="thumbnail" />
-          <div class="title">Project Title</div>
-          <div class="description">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Repellendus ut quia dolore quaerat, hic, debitis provident, repellat
-            expedita quas dicta omnis eaque autem perferendis impedit a alias
-            nobis molestias nesciunt?
+        <div class="contents">
+          <div class="project">
+            <div class="thumbnail"></div>
+            <div class="project-title">Project Title</div>
+            <div class="project-description">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Repellendus ut quia dolore quaerat, hic, debitis provident,
+              repellat expedita quas dicta omnis eaque autem perferendis impedit
+              a alias nobis molestias nesciunt?
+            </div>
           </div>
         </div>
       </div>
