(05/12) - Finished projects & blog sections

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
       type="text/css"
       href="assets/scss/projects/projects.scss"
     />
+    <link
+      rel="stylesheet/less"
+      type="text/css"
+      href="assets/scss/blog/blog.scss"
+    />
     <script src="https://cdn.jsdelivr.net/npm/less@4.1.1"></script>
 
     <!-- Font Awesome -->
@@ -96,7 +101,7 @@
       </header>
 
       <!-- Hero Section -->
-      <div class="hero">
+      <section class="hero">
         <img
           class="icon"
           src="assets/img/avatars/thumbs_up.png"
@@ -126,10 +131,10 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- Technologies -->
-      <div class="techs">
+      <section class="techs">
         <div class="title">Technologies</div>
         <div class="description">
           Different technologies that I use on a daily basis
@@ -184,27 +189,107 @@
             </div>
           </li>
         </ul>
-      </div>
+      </section>
 
       <!-- Projects -->
-      <div class="projects">
+      <section class="projects">
         <div class="title">Projects</div>
         <div class="description">
           Projects on which I was able to work and collaborate
         </div>
-        <div class="contents">
-          <div class="project">
-            <div class="thumbnail"></div>
-            <div class="project-title">Project Title</div>
-            <div class="project-description">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Repellendus ut quia dolore quaerat, hic, debitis provident,
-              repellat expedita quas dicta omnis eaque autem perferendis impedit
-              a alias nobis molestias nesciunt?
+        <ul class="contents">
+          <li class="item">
+            <img class="thumbnail" src="assets/img/textures/2.png" />
+            <div class="item-content">
+              <div class="title">Project Title</div>
+              <div class="description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+                rem eaque dolore libero voluptates consectetur quibusdam earum
+                ex repellat corporis ipsam reiciendis quaerat necessitatibus
+                facere nam vero, illo unde sunt.
+              </div>
             </div>
-          </div>
+          </li>
+          <li class="item">
+            <img class="thumbnail" src="assets/img/textures/2.png" />
+            <div class="item-content">
+              <div class="title">Project Title</div>
+              <div class="description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+                rem eaque dolore libero voluptates consectetur quibusdam earum
+                ex repellat corporis ipsam reiciendis quaerat necessitatibus
+                facere nam vero, illo unde sunt.
+              </div>
+            </div>
+          </li>
+          <li class="item">
+            <img class="thumbnail" src="assets/img/textures/2.png" />
+            <div class="item-content">
+              <div class="title">Project Title</div>
+              <div class="description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+                rem eaque dolore libero voluptates consectetur quibusdam earum
+                ex repellat corporis ipsam reiciendis quaerat necessitatibus
+                facere nam vero, illo unde sunt.
+              </div>
+            </div>
+          </li>
+          <li class="item">
+            <img class="thumbnail" src="assets/img/textures/2.png" />
+            <div class="item-content">
+              <div class="title">Project Title</div>
+              <div class="description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+                rem eaque dolore libero voluptates consectetur quibusdam earum
+                ex repellat corporis ipsam reiciendis quaerat necessitatibus
+                facere nam vero, illo unde sunt.
+              </div>
+            </div>
+          </li>
+        </ul>
+        <a class="custom-button" href="/">
+          <img class="icon" src="assets/img/icons/circle.svg" />
+          See More
+        </a>
+      </section>
+
+      <!-- Blog -->
+      <section class="blogs">
+        <div class="title">Blog</div>
+        <div class="description">
+          Where I love to share my knowledge through writing
         </div>
-      </div>
+        <ul class="contents">
+          <li class="item">
+            <img class="thumbnail" src="assets/img/textures/2.png" />
+            <div class="title">Blog Title</div>
+            <div class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </div>
+            <div class="date">September 29, 2023</div>
+          </li>
+          <li class="item">
+            <img class="thumbnail" src="assets/img/textures/2.png" />
+            <div class="title">Blog Title</div>
+            <div class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </div>
+            <div class="date">September 29, 2023</div>
+          </li>
+          <li class="item">
+            <img class="thumbnail" src="assets/img/textures/2.png" />
+            <div class="title">Blog Title</div>
+            <div class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </div>
+            <div class="date">September 29, 2023</div>
+          </li>
+        </ul>
+        <a class="custom-button" href="/">
+          <img class="icon" src="assets/img/icons/circle.svg" />
+          See More
+        </a>
+      </section>
     </main>
   </body>
 </html>
