(01/01) - Create footer section

--- a/html/index.html
+++ b/html/index.html
@@ -66,6 +66,11 @@
     <link
       rel="stylesheet/less"
       type="text/css"
+      href="assets/scss/footer/footer.scss"
+    />
+    <link
+      rel="stylesheet/less"
+      type="text/css"
       href="assets/scss/hero/hero.scss"
     />
     <link
@@ -431,6 +436,65 @@
           </a>
         </div>
       </section>
+
+      <!-- Footer -->
+      <footer>
+        <div class="container">
+          <div class="footer-left">
+            <img
+              class="icon"
+              src="assets/img/avatars/on_computer.png"
+              alt="Estéban On Computer"
+            />
+            <div class="description">
+              Hi, I'm Estéban Piecourt, a 19-year-old FullStack Developer based
+              in Strasbourg. With 3 years of experience in web development, I'm
+              passionate about creating innovative and dynamic web solutions.
+              I'm committed to crafting digital experiences that push the
+              boundaries of what's possible. Explore my portfolio and feel free
+              to get in touch to collaborate on your next web project today.
+            </div>
+          </div>
+          <div class="footer-right">
+            <ul class="links">
+              <li class="link">
+                <a class="link" href="/">Home</a>
+              </li>
+              <li class="link">
+                <a class="link" href="/">Technologies</a>
+              </li>
+              <li class="link">
+                <a class="link" href="/">Projects</a>
+              </li>
+            </ul>
+            <ul class="links">
+              <li class="link">
+                <a class="link" href="/">Blog</a>
+              </li>
+              <li class="link">
+                <a class="link" href="/">About</a>
+              </li>
+              <li class="link">
+                <a class="link" href="/">Contact</a>
+              </li>
+            </ul>
+            <ul class="links">
+              <li class="link">
+                <a class="link" href="/">Changelog</a>
+              </li>
+              <li class="link">
+                <a class="link" href="/">Resume</a>
+              </li>
+              <li class="link">
+                <a class="link" href="/">Snippets</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="copyright">
+          © 2023 Estéban Piecourt. Tous droits réservés.
+        </div>
+      </footer>
     </main>
   </body>
 </html>
